# pwime

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.bat
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency.yml
src/pwime/: __main__.py  asset_manager.py  cli.py  diff.py  preferences.py  project.py
src/pwime/asset_names/: ECHOES.json
src/pwime/gui/: area.py  asset_manager.py  gui_state.py  gui_tools.py  imgui_main.py  mlvl.py  popup.py  project_popup.py  property_renderer.py  references.py  script_instance.py  select_iso_popup.py
src/pwime/gui/editor/: base_window.py  mlvl_window.py  mrea_window.py  strg_window.py  txtr_window.py
src/pwime/operations/: base.py  script_instance.py  serializer.py
src/pwime/util/: imgui_helper.py  json_lib.py  set_helper.py
tests/: test_empty.py
